feat(public-api): implement final oauth authorize
